--- a/background.html
+++ b/background.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
 <!--
 //================================================
 /*
@@ -28,11 +32,7 @@ To view a copy of this license, visit http://creativecommons.org/licenses/GPL/2.
 */
 //================================================
 -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
+<script type="text/javascript" src="js/constants.js"></script>
 <script type="text/javascript" src="js/background.js"></script>
 <script type="text/javascript" src="js/motion.js"></script>
 <script type="text/javascript" src="js/speech.js"></script>
